Fixed sidebar alignment error

--- a/style/main.css
+++ b/style/main.css
@@ -176,7 +176,7 @@ samp {
 	width: 1022px;
 	min-height: 100%;
 
-	background: #fff;
+	background: #fff url('../img/sidebar-bk.jpg') repeat-y right top;
 
 	box-shadow: 0px 0px 18px 8px #000;
 	-webkit-box-shadow: 0px 0px 18px 8px #000;
@@ -306,9 +306,6 @@ samp {
 .content-wrap {
 	padding-bottom: 81px; /* Space for footer */
 }
-	.capri-api-docs .content-wrap {
-		background: url('../img/sidebar-bk.jpg') repeat-y right top;
-	}
 
 section.content {
 	padding: 14pt;
